--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -19,16 +19,15 @@
  * Pane
  */
 .c-pane--1-3 {
-  width: calc((100% / 3) - .5rem);
+  width: calc((100% / 3) - 0.5rem);
 }
 
 .c-pane--2-3 {
-  width: calc(((100% / 3) * 2) - .5rem);
-
+  width: calc(((100% / 3) * 2) - 0.5rem);
 }
 
 .c-pane--1-2 {
-  width: calc(50% - .5rem);
+  width: calc(50% - 0.5rem);
 }
 
 .c-pane--1 {
@@ -41,10 +40,14 @@
   justify-content: space-between;
 }
 
+.u-flex-v-center {
+  align-items: center;
+}
+
 .c-pane {
   box-sizing: border-box;
   padding: 1rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .c-pane--border {
