--- a/assets/css/pageblocks.css
+++ b/assets/css/pageblocks.css
@@ -6,11 +6,15 @@
   position: relative;
   min-height: 2rem;
   border: 1px #eee solid;
-  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background: #fff;
+  flex-wrap: wrap;
+}
+
+.page-block-header-content {
+  width: calc(100% - 150px);
 }
 
 .page-block-header:hover {
@@ -19,11 +23,19 @@
 
 .page-block-header__title {
   margin-left: 1rem;
+  line-height: 1.3;
+  width: calc(100% - 200px);
+}
+
+.page-block-header__title b {
+  display: block;
+  font-size: 1rem;
+  margin-bottom: .25rem;
 }
 
 .page-block-header__thumbnail {
-  width: 150px;
-  height: 75px;
+  width: 180px;
+  height: 90px;
   object-fit: cover;
 }
 
@@ -65,6 +77,10 @@
   max-height: 0;
   overflow-y: hidden;
   padding: 0;
+}
+
+.page-block__content textarea {
+  min-height: 15rem;
 }
 
 /**
